--- a/index.html
+++ b/index.html
@@ -5,5 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HomeWork 1</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <a href="/">WebStudio</a>
+        <ol>
+          <li><a href="#">Студия<</a></li>
+          <li><a href="#">Портфолио<</a></li>
+          <li><a href="#">Контакты<</a></li>
+        </ol>
+        <ol>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        </ol>
+      </nav>
+    </header>
+  </body>
 </html>
