--- a/index.html
+++ b/index.html
@@ -57,6 +57,36 @@
             </p>
           </li>
         </ul>
+        <h3>Чем мы занимаемся</h3>
+        <ul>
+          <li>
+            <a href="#">
+              <img
+                src="./images/box 1.jpg"
+                alt="Клавиатура"
+                width="370"
+                height="294"
+            /></a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="./images/box 2.jpg"
+                alt="Телефон"
+                width="370"
+                height="294"
+            /></a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="./images/box 3.jpg"
+                alt="Графическией планшет"
+                width="370"
+                height="294"
+            /></a>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
