--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -61,33 +61,59 @@
         <ul>
           <li>
             <a href="#">
-              <img
-                src="./images/box 1.jpg"
-                alt="Клавиатура"
-                width="370"
-                height="294"
-            /></a>
+              <img src="./images/box 1.jpg" alt="Клавиатура" width="370" height="294">
+            </a>
           </li>
           <li>
             <a href="#">
-              <img
-                src="./images/box 2.jpg"
-                alt="Телефон"
-                width="370"
-                height="294"
-            /></a>
+              <img src="./images/box 2.jpg" alt="Телефон" width="370" height="294">
+            </a>
           </li>
           <li>
             <a href="#">
-              <img
-                src="./images/box 3.jpg"
-                alt="Графическией планшет"
-                width="370"
-                height="294"
-            /></a>
+              <img src="./images/box 3.jpg" alt="Графическией планшет" width="370" height="294">
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/team/team card 1.jpg" alt="Фото сотрудника" width="270" height="260">
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/team/team card 2.jpg" alt="Фото сотрудника" width="270" height="260">
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/team/team card 3.jpg" alt="Фото сотрудника" width="270" height="260">
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/team/team card 4.jpg" alt="Фото сотрудника"  width="270" height="260">
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
+    <footer>
+      <p>WebStudio</p>
+      <address>г. Киев, пр-т Леси Украинки, 26</address>
+      <ul>
+        <li>
+          <a href="mailto:info@example.com">info@example.com</a>
+        </li>
+        <li>
+          <a href="+380991111111">+38 099 111 11 11</a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
+<img src="" alt="">
