--- a/index.html
+++ b/index.html
@@ -1,119 +1,119 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HomeWork 1</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="/">WebStudio</a>
-        <ul>
-          <li><a href="#">Студия</a></li>
-          <li><a href="#">Портфолио</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HomeWork 1</title>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <a href="./index.html">WebStudio</a>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a href="#">Студия</a></li>
+        <li><a href="#">Портфолио</a></li>
+        <li><a href="#">Контакты</a></li>
       </ul>
-    </header>
-    <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <a href="#">Заказать услугу</a>
-      </section>
-      <section>
-        <!-- <h2>Примеры робот</h2> -->
-        <ul>
-          <li>
-            <h2>Внимание к деталям</h2>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h2>Пунктуальность</h2>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h2>Планирование</h2>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h2>Современные технологии</h2>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
-        <h3>Чем мы занимаемся</h3>
-        <ul>
-          <li>
-            <a href="#">
-              <img src="./images/box 1.jpg" alt="Клавиатура" width="370" height="294">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="./images/box 2.jpg" alt="Телефон" width="370" height="294">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="./images/box 3.jpg" alt="Графическией планшет" width="370" height="294">
-            </a>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img src="./images/team/team card 1.jpg" alt="Фото сотрудника" width="270" height="260">
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/team/team card 2.jpg" alt="Фото сотрудника" width="270" height="260">
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/team/team card 3.jpg" alt="Фото сотрудника" width="270" height="260">
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img src="./images/team/team card 4.jpg" alt="Фото сотрудника"  width="270" height="260">
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer>
-      <p>WebStudio</p>
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
+    </nav>
+    <ul>
+      <li>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      </li>
+      <li>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      </li>
+    </ul>
+  </header>
+  <main>
+    <section>
+      <h1>Эффективные решения для вашего бизнеса</h1>
+      <a href="#">Заказать услугу</a>
+    </section>
+    <ul>
+      <li>
+        <h2>Внимание к деталям</h2>
+        <p>
+          Идейные соображения, а также начало повседневной работы по
+          формированию позиции.
+        </p>
+      </li>
+      <li>
+        <h2>Пунктуальность</h2>
+        <p>
+          Задача организации, в особенности же рамки и место обучения кадров
+          влечет за собой.
+        </p>
+      </li>
+      <li>
+        <h2>Планирование</h2>
+        <p>
+          Равным образом консультация с широким активом в значительной
+          степени обуславливает.
+        </p>
+      </li>
+      <li>
+        <h2>Современные технологии</h2>
+        <p>
+          Значимость этих проблем настолько очевидна, что реализация
+          плановых заданий.
+        </p>
+      </li>
+    </ul>
+    <section>
+      <h3>Чем мы занимаемся</h3>
       <ul>
         <li>
-          <a href="mailto:info@example.com">info@example.com</a>
+          <a href="#">
+            <img src="./images/box1.jpg" alt="Клавиатура" width="370" height="294">
+          </a>
         </li>
         <li>
-          <a href="+380991111111">+38 099 111 11 11</a>
+          <a href="#">
+            <img src="./images/box2.jpg" alt="Телефон" width="370" height="294">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./images/box3.jpg" alt="Графическией планшет" width="370" height="294">
+          </a>
         </li>
       </ul>
-    </footer>
-  </body>
+    </section>
+    <section>
+      <h3>Наша команда</h3>
+      <ul>
+        <li>
+          <img src="./images/team/team card1.jpg" alt="Фото сотрудника" width="270" height="260">
+          <h4>Игорь Демьяненко</h4>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img src="./images/team/team card2.jpg" alt="Фото сотрудника" width="270" height="260">
+          <h4>Ольга Репина</h4>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img src="./images/team/team card3.jpg" alt="Фото сотрудника" width="270" height="260">
+          <h4>Николай Тарасов</h4>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./images/team/team card4.jpg" alt="Фото сотрудника" width="270" height="260">
+          <h4>Михаил Ермаков</h4>
+          <p>UI Designer</p>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <a href="./index.html">WebStudio</a>
+    <address>г. Киев, пр-т Леси Украинки, 26 <br />
+      <a href="mailto:info@example.com">info@example.com</a><br />
+      <a href="+380991111111">+38 099 111 11 11</a>
+    </address>
+  </footer>
+</body>
+
 </html>
-<img src="" alt="">
