--- a/index.html
+++ b/index.html
@@ -85,22 +85,22 @@
       <h3>Наша команда</h3>
       <ul>
         <li>
-          <img src="./images/team/team card1.jpg" alt="Фото сотрудника" width="270" height="260">
+          <img src="./images/team/team_card1.jpg" alt="Фото сотрудника" width="270" height="260">
           <h4>Игорь Демьяненко</h4>
           <p>Product Designer</p>
         </li>
         <li>
-          <img src="./images/team/team card2.jpg" alt="Фото сотрудника" width="270" height="260">
+          <img src="./images/team/team_card2.jpg" alt="Фото сотрудника" width="270" height="260">
           <h4>Ольга Репина</h4>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img src="./images/team/team card3.jpg" alt="Фото сотрудника" width="270" height="260">
+          <img src="./images/team/team_card3.jpg" alt="Фото сотрудника" width="270" height="260">
           <h4>Николай Тарасов</h4>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="./images/team/team card4.jpg" alt="Фото сотрудника" width="270" height="260">
+          <img src="./images/team/team_card4.jpg" alt="Фото сотрудника" width="270" height="260">
           <h4>Михаил Ермаков</h4>
           <p>UI Designer</p>
         </li>
