--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="#">Заказать услугу</a>
       </section>
       <section>
-        <!-- <h2>Наши плюси</h2> -->
+        <!-- <h2>Наши преимущество</h2> -->
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
