--- a/index.html
+++ b/index.html
@@ -1,152 +1,119 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HomeWork 1</title>
-  </head>
 
-  <body>
-    <header>
-      <nav>
-        <a href="/">WebStudio</a>
-        <ul>
-          <li><a href="#">Студия</a></li>
-          <li><a href="#">Портфолио</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HomeWork 1</title>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <a href="/">WebStudio</a>
+      <ul>
+        <li><a href="#">Студия</a></li>
+        <li><a href="#">Портфолио</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+    </nav>
+    <ul>
+      <li>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      </li>
+      <li>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      </li>
+    </ul>
+  </header>
+  <main>
+    <section>
+      <h1>Эффективные решения для вашего бизнеса</h1>
+      <button>Заказать услугу</button>
+    </section>
+    <section>
+      <!-- <h2>Наши преимущество</h2> -->
       <ul>
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <h3>Внимание к деталям</h3>
+          <p>
+            Идейные соображения, а также начало повседневной работы по
+            формированию позиции.
+          </p>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <h3>Пунктуальность</h3>
+          <p>
+            Задача организации, в особенности же рамки и место обучения кадров
+            влечет за собой.
+          </p>
+        </li>
+        <li>
+          <h3>Планирование</h3>
+          <p>
+            Равным образом консультация с широким активом в значительной
+            степени обуславливает.
+          </p>
+        </li>
+        <li>
+          <h3>Современные технологии</h3>
+          <p>
+            Значимость этих проблем настолько очевидна, что реализация
+            плановых заданий.
+          </p>
         </li>
       </ul>
-    </header>
-    <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <a href="#">Заказать услугу</a>
-      </section>
-      <section>
-        <!-- <h2>Наши преимущество</h2> -->
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/box1.jpg"
-              alt="Клавиатура"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/box2.jpg"
-              alt="Телефон"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/box3.jpg"
-              alt="Графическией планшет"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h3>Наша команда</h3>
-        <ul>
-          <li>
-            <img
-              src="./images/team/team_card1.jpg"
-              alt="Фото сотрудника"
-              width="270"
-              height="260"
-            />
-            <h4>Игорь Демьяненко</h4>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/team_card2.jpg"
-              alt="Фото сотрудника"
-              width="270"
-              height="260"
-            />
-            <h4>Ольга Репина</h4>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/team_card3.jpg"
-              alt="Фото сотрудника"
-              width="270"
-              height="260"
-            />
-            <h4>Николай Тарасов</h4>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/team_card4.jpg"
-              alt="Фото сотрудника"
-              width="270"
-              height="260"
-            />
-            <h4>Михаил Ермаков</h4>
-            <p>UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer>
-      <a href="/">WebStudio</a>
-      <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <ul>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="+380991111111">+38 099 111 11 11</a></li>
-        </ul>
-      </address>
-    </footer>
-  </body>
+    </section>
+    <section>
+      <h2>Чем мы занимаемся</h2>
+      <ul>
+        <li>
+          <img src="./images/box1.jpg" alt="Клавиатура" width="370" height="294" />
+        </li>
+        <li>
+          <img src="./images/box2.jpg" alt="Телефон" width="370" height="294" />
+        </li>
+        <li>
+          <img src="./images/box3.jpg" alt="Графическией планшет" width="370" height="294" />
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <img src="./images/team/team_card1.jpg" alt="Фото сотрудника" width="270" height="260" />
+          <h3>Игорь Демьяненко</h3>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img src="./images/team/team_card2.jpg" alt="Фото сотрудника" width="270" height="260" />
+          <h3>Ольга Репина</h3>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img src="./images/team/team_card3.jpg" alt="Фото сотрудника" width="270" height="260" />
+          <h3>Николай Тарасов</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./images/team/team_card4.jpg" alt="Фото сотрудника" width="270" height="260" />
+          <h3>Михаил Ермаков</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <a href="/">WebStudio</a>
+    <address>
+      <p>г. Киев, пр-т Леси Украинки, 26</p>
+      <ul>
+        <li><a href="mailto:info@example.com">info@example.com</a></li>
+        <li><a href="+380991111111">+38 099 111 11 11</a></li>
+      </ul>
+    </address>
+  </footer>
+</body>
+
 </html>
